tests-integration/fixtures/checking/226_record_binder_additional_property_nested/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
test :: { outer :: { x :: Int } } -> Int

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: y
  --> 4:6..4:25
  |
4 | test { outer: { x, y } } = x
  |      ^~~~~~~~~~~~~~~~~~~
warning[CustomWarning]: Pattern match is not exhaustive. Missing: _
  --> 3:1..3:41
  |
3 | test :: { outer :: { x :: Int } } -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
